<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SimpleWebCam</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="error_title">Error</string>
    <string name="confirm">Confirm</string>
    <string name="prepare_camera">Failed to Prepare Camera</string>
    <string name="get_buffer_size">Failed to get image buffer size</string>
    <string name="allocate_direct_buffer_null">Failed to allocate direct buffer</string>
    <string name="allocate_direct_buffer_exception">Exception to allocate direct buffer</string>
    <string name="set_direct_buffer">Failed to set direct buffer</string>    
    <string name="capture">Capture</string>
    <string name="watch">Watch</string>
    <string name="print">Print</string>
    <string name="gallery">Gallery</string>
    <string name="preview">Preview</string>
    <string name="start_recording">Start Recording</string>    
    <string name="stop_recording">Stop Recording</string>    
    <string name="switch_to_recording">To Recording</string>    
    <string name="switch_to_capture">To Capture</string>
    <string name="patient_info">Patient Information</string>
    <string name="unknow">unknow</string>
    <string name="report_number">Serial Number</string>
    <string name="patient_name">Name</string>
    <string name="patient_age">Age</string>
    <string name="hospital_no">Hospital Number</string>
    <string name="patient_no">Patient Number</string>
    <string name="departments">Departments</string>
    <string name="doctor">Report Doctor</string>
    <string name="attitude">Attitude</string>
    <string name="fine">Fine</string>
    <string name="bad">Bad</string>
    <string name="project">Project</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="suspected_positive">Suspected Positive</string>
    <string name="advice">Advice</string>
</resources>
