<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/patient_info">

	<EditTextPreference
		android:key="number"
		android:title="@string/report_number"
		android:singleLine="true"
		android:inputType="number"
		android:summary="unknow"
		android:persistent="false"
		/>
	<EditTextPreference
		android:key="name"
		android:title="@string/patient_name"
		android:singleLine="true"
		android:inputType="textCapWords|textPersonName"
		android:summary="unknow"
		android:persistent="false"
		/>
	<!-- <ListPreference 
		android:key="gender"
		android:title="Gender"
		android:entries="@array/entry_list"                    
		android:entryValues="@array/values_list"
		android:dialogTitle="Gender"
		android:defaultValue="1"
		android:summary="unknow"
        /> -->
	<EditTextPreference
		android:key="age"
		android:title="@string/patient_age"
		android:singleLine="true"
		android:inputType="number"
		android:summary="unknow"
		android:persistent="false"
		/>
	<EditTextPreference
		android:key="hospital_no"
		android:title="@string/hospital_no"
		android:singleLine="true"
		android:inputType="number"
		android:summary="unknow"
		android:persistent="false"
		/>
	<EditTextPreference
		android:key="patient_no"
		android:title="@string/patient_no"
		android:singleLine="true"
		android:inputType="number"
		android:summary="unknow"
		android:persistent="false"
		/>
	<EditTextPreference
		android:key="departments"
		android:title="@string/departments"
		android:singleLine="true"
		android:summary="unknow"
		android:persistent="false"
		/>

</PreferenceScreen>
